tests/parsing/reinstantiation_in_file/stderr.golden
error: reinstantiation of 'Main', first instantiation line 1 column 1
bus.fbd +2:1
   |
 2 | Main bus
   | ^^^^
